--- a/html/registertutor.html
+++ b/html/registertutor.html
@@ -125,8 +125,8 @@
                                 </div>
                                 <div class="col-lg-6"></div>
                             </div>
-                            <div class="form-group required">
-                                <label for="" class="col-lg-2 labelform">เอกสารสำเนาบัตรประชาชน</label>
+                            <div class="form-group">
+                                <label for="" class="col-lg-2">เอกสารสำเนาบัตรประชาชน</label>
                                 <div class="col-lg-4">
                                     <input type="file" class="form-control-file" id="inputIDCardFile">
                                 </div>
