--- a/html/studentprofile.html
+++ b/html/studentprofile.html
@@ -164,7 +164,7 @@
             stuNickname: txtNickname,
             stuPhonenum: txtTel,
             stuSex: sex,
-            stuLevel: parseInt(level),
+            stuLevel: level,
             stuSchool: school
         };
         console.log(bodyRequest);
