--- a/html/mainStudent.html
+++ b/html/mainStudent.html
@@ -7,6 +7,22 @@
 
 <body>
     <br>
+    <div>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="javascript:loadMainPage();">หน้าหลัก</a>
+            </li>
+        </ol>
+    </div>
+    <br>
+    <div class="alert alert-dismissible alert-success" style="display: none;">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>บันทึกข้อมูลสำเร็จ</strong>
+    </div>
+    <div class="alert alert-dismissible alert-danger" style="display: none;">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>ไม่สามารถบันทึกข้อมูลได้</strong>
+    </div>
     <br>
     <div class="container">
         <ul class="nav nav-tabs">
@@ -28,29 +44,34 @@
         </ul>
 
         <div id="studnetMainContent" class="tab-content">
+            <!-- Open, Reopen, Reserved -->
             <div class="tab-pane fade in active" id="tabFindingTutor">
                 <table id="gridTab1Student" class="table table-condensed table-hover table-striped">
                     <thead>
                         <tr>
-                            <th data-column-id="subject" data-width="25%">วิชาและระดับชั้น</th>
-                            <th data-column-id="time" data-width="35%">วัน เวลาและสถานที่เรียน</th>
-                            <th data-column-id="detail" data-width="15%" data-sortable="false" data-searchable="false"></th>
+                            <th data-column-id="clsid" data-width="10%" data-align="center">รหัสงานสอน</th>
+                            <th data-column-id="subject" data-width="20%">วิชาและระดับชั้น</th>
+                            <th data-column-id="time" data-width="60%">วัน เวลาและสถานที่เรียน</th>
+                            <th data-column-id="detail" data-width="10%" data-sortable="false" data-searchable="false"></th>
                         </tr>
                     </thead>
                 </table>
             </div>
+            <!-- Ready -->
             <div class="tab-pane fade" id="tabCurrentCourse">
                 <table id="gridTab2Student" class="table table-condensed table-hover table-striped">
                     <thead>
                         <tr>
-                            <th data-column-id="tutorname" data-width="25%">ชื่อ สกุลติวเตอร์</th>
-                            <th data-column-id="subject" data-width="25%">วิชาและระดับชั้น</th>
-                            <th data-column-id="time" data-width="35%">วัน เวลาและสถานที่เรียน</th>
-                            <th data-column-id="detail" data-width="15%" data-sortable="false" data-searchable="false"></th>
+                            <th data-column-id="clsid" data-width="10%" data-align="center">รหัสงานสอน</th>
+                            <th data-column-id="tutorname" data-width="20%">ชื่อ สกุลติวเตอร์</th>
+                            <th data-column-id="subject" data-width="20%">วิชาและระดับชั้น</th>
+                            <th data-column-id="time" data-width="40%">วัน เวลาและสถานที่เรียน</th>
+                            <th data-column-id="detail" data-width="10%" data-sortable="false" data-searchable="false"></th>
                         </tr>
                     </thead>
                 </table>
             </div>
+            <!-- Request to change tutor, Request to cancel class by student or parent, Request to cancel class by tutor -->
             <div class="tab-pane fade" id="tabStudentOther">
                 <table id="gridTab3Student" class="table table-condensed table-hover table-striped">
                     <thead>
@@ -58,6 +79,7 @@
                             <th data-column-id="tutorname" data-width="25%">ชื่อ สกุลติวเตอร์</th>
                             <th data-column-id="subject" data-width="25%">วิชาและระดับชั้น</th>
                             <th data-column-id="time" data-width="35%">วัน เวลาและสถานที่เรียน</th>
+
                             <th data-column-id="detail" data-width="15%" data-sortable="false" data-searchable="false"></th>
                         </tr>
                     </thead>
@@ -138,6 +160,7 @@
             gridTab1Student.bootgrid("append", [
 
                 {
+                    "clsid": work.clsId,
                     "subject": work.subjectAndGroupDetailName,
                     "time": work.recTimeLoc,
                     "detail": "<button type='button' class='btn btn-primary btn-lg command-detail' data-row-id='" + i + "'>ดูรายละเอียด</button>"
