--- a/html/registerClass.html
+++ b/html/registerClass.html
@@ -1175,7 +1175,7 @@
             stuNickname: txtNickname,
             stuPhonenum: txtTel,
             stuSex: sex,
-            stuLevel: parseInt(level),
+            stuLevel: level,
             stuSchool: school,
             studentAvailableTimelocations: avatimes,
             subjectlist: applySubjects,
