--- a/index.htm
+++ b/index.htm
@@ -192,37 +192,39 @@
       name: "20.00 น.", val: "20"
     }];
     dataLevel = [{
-        name: "อนุบาลศึกษาปีที่ 1", val: "1"
+        name: "อนุบาลศึกษาปีที่ 1", val: "อนุบาลศึกษาปีที่ 1"
     }, {
-        name: "อนุบาลศึกษาปีที่ 2", val: "2"
+        name: "อนุบาลศึกษาปีที่ 2", val: "อนุบาลศึกษาปีที่ 2"
     }, {
-        name: "อนุบาลศึกษาปีที่ 3", val: "3"
+        name: "อนุบาลศึกษาปีที่ 3", val: "อนุบาลศึกษาปีที่ 3"
     }, {
-        name: "ประถมศึกษาปีที่ 1", val: "4"
+        name: "ประถมศึกษาปีที่ 1", val: "ประถมศึกษาปีที่ 1"
     }, {
-        name: "ประถมศึกษาปีที่ 2", val: "5"
+        name: "ประถมศึกษาปีที่ 2", val: "ประถมศึกษาปีที่ 2"
     }, {
-        name: "ประถมศึกษาปีที่ 3", val: "6"
+        name: "ประถมศึกษาปีที่ 3", val: "ประถมศึกษาปีที่ 3"
     }, {
-        name: "ประถมศึกษาปีที่ 4", val: "7"
+        name: "ประถมศึกษาปีที่ 4", val: "ประถมศึกษาปีที่ 4"
     }, {
-        name: "ประถมศึกษาปีที่ 5", val: "8"
+        name: "ประถมศึกษาปีที่ 5", val: "ประถมศึกษาปีที่ 5"
     }, {
-        name: "ประถมศึกษาปีที่ 6", val: "9"
+        name: "ประถมศึกษาปีที่ 6", val: "ประถมศึกษาปีที่ 6"
     }, {
-        name: "มัธยมศึกษาปีที่ 1", val: "10"
+        name: "มัธยมศึกษาปีที่ 1", val: "มัธยมศึกษาปีที่ 1"
     }, {
-        name: "มัธยมศึกษาปีที่ 2", val: "11"
+        name: "มัธยมศึกษาปีที่ 2", val: "มัธยมศึกษาปีที่ 2"
     }, {
-        name: "มัธยมศึกษาปีที่ 3", val: "12"
+        name: "มัธยมศึกษาปีที่ 3", val: "มัธยมศึกษาปีที่ 3"
     }, {
-        name: "มัธยมศึกษาปีที่ 4", val: "13"
+        name: "มัธยมศึกษาปีที่ 4", val: "มัธยมศึกษาปีที่ 4"
     }, {
-        name: "มัธยมศึกษาปีที่ 5", val: "14"
+        name: "มัธยมศึกษาปีที่ 5", val: "มัธยมศึกษาปีที่ 5"
     }, {
-        name: "มัธยมศึกษาปีที่ 6", val: "15"
+        name: "มัธยมศึกษาปีที่ 6", val: "มัธยมศึกษาปีที่ 6"
     }, {
-        name: "ระดับปริญญาตรี", val: "15"
+        name: "ระดับปริญญาตรี", val: "ระดับปริญญาตรี"
+    }, {
+        name: "อื่นๆ", val: "อื่นๆ"
     }];
   </script>
 </head>
@@ -423,7 +425,7 @@
       if (_gUserType == "tutor") {
         jQuery("#divMainContainer").load('./html/main.html');
         jQuery("#nav-itm-student-schedule").hide();
-        jQuery("#nav-itm-tutor-schedule").show();
+        jQuery("#nav-itm-tutor-schedule").hide();
         jQuery("#nav-itm-rate").hide();
         jQuery("#nav-itm-publishJob").show();
         jQuery("#nav-itm-registerClass").hide();
@@ -434,7 +436,7 @@
       }
       else if (_gUserType == "student") {
         jQuery("#divMainContainer").load('./html/mainStudent.html');
-        jQuery("#nav-itm-student-schedule").show();
+        jQuery("#nav-itm-student-schedule").hide();
         jQuery("#nav-itm-tutor-schedule").hide();
         jQuery("#nav-itm-rate").show();
         jQuery("#nav-itm-publishJob").hide();
