--- a/html/main.html
+++ b/html/main.html
@@ -178,7 +178,7 @@
             gridTab3Tutor.find(".command-detail").on("click", function (e) {
                 console.log("detail");
                 var i = parseInt($(this).data("row-id"));
-                loadVerifiedPaymentClassDetail(_workTutorTabThree[i]);
+                loadClassDetail(_workTutorTabThree[i]);
             });
         });
 
